--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://192.168.1.67:3306/youke?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/youke?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -16,6 +16,10 @@ server.tomcat.remoteIpHeader=x-forwarded-for
 server.tomcat.basedir=
 server.tomcat.backgroundProcessorDelay=30
 
+
+spring.data.mongo.host=192.168.1.128
+spring.data.mongo.port=27010
+spring.data.mongo.database=peafowl_preshow
 
 
 mybatis.mapper-locations: classpath*:com/tofly/youke/persistence/mapper/*Mapper.xml
